--- a/vignettes/articles/StyleGuide.Rmd
+++ b/vignettes/articles/StyleGuide.Rmd
@@ -8,7 +8,7 @@ The Hector package contains both R and C++ code. Hector's model components are w
 
 ### Coding style:
 
-- New C++ code should follow the [LLVL coding standards](https://llvm.org/docs/CodingStandards.html)
+- New C++ code should follow the [LLVM coding standards](https://llvm.org/docs/CodingStandards.html)
 
 The Hector codebase is periodically reformatted using [clang-format](https://clang.llvm.org/docs/ClangFormat.html).
 For example, assuming that the working directory is the repository root:
