--- a/vignettes/articles/climate.Rmd
+++ b/vignettes/articles/climate.Rmd
@@ -5,7 +5,7 @@ title: "Hector's Climate"
 ## Science
 
 **Hector** is an open source, object-oriented, simple global climate carbon-cycle model. Greenhouse gases (GHGs) and aerosols are emitted into the atmosphere, where the GHGs accumulate. The GHG concentrations and aerosol emissions impact the Earth's radiative forcing budget. Hector's temperature component (which is based on DOECLIM^[Kriegler, E. (2005). Imprecise probability analysis for integrated assessment of climate change. Ph.D. thesis. Potsdam URL: Universit t
-Potsdam. https://www.pik‐potsdam.de/members/edenh/theses/PhDKriegler.pdf], a diffusion ocean-energy balance) uses total radiative forcing to calculate mean global air temperature from sea-surface and land-surface temperature anomalies. Hector returns global mean air surface temperate (GMAT), land surface temperature, and ocean surface temperature which can be used to calculate global mean surface temperature (see [here](GMAT-GMST.html) for more details). DOECLIM simulates the different rates of warming over land and ocean surfaces global mean surface temperature, meaning that the land-ocean warming ratio is an emergent property of Hector. However, users do have the option to provide a land-ocean warming ratio to be used in place of DOECLIM’s internal calculations (see [here](land_ocean_warming.html) for an example and more details about this feature).
+Potsdam. https://www.pik‐potsdam.de/members/edenh/theses/PhDKriegler.pdf], a diffusion ocean-energy balance) uses total radiative forcing to calculate mean global air temperature from sea-surface and land-surface temperature anomalies. Hector returns global mean air surface temperate (GMAT), land surface temperature, and ocean surface temperature which can be used to calculate global mean surface temperature (see [here](ex_GMAT-GMST.html) for more details). DOECLIM simulates the different rates of warming over land and ocean surfaces global mean surface temperature, meaning that the land-ocean warming ratio is an emergent property of Hector. However, users do have the option to provide a land-ocean warming ratio to be used in place of DOECLIM’s internal calculations (see [here](ex_land_ocean_warming.html) for an example and more details about this feature).
 
 ## Implementation
 
