--- a/vignettes/articles/BuildHector.Rmd
+++ b/vignettes/articles/BuildHector.Rmd
@@ -9,7 +9,9 @@ building instructions for the R Hector package and the executable.
 
 # R Hector 
 
-To install R, follow the [official instructions](https://cloud.r-project.org/) for your platform.
+To install R, follow the [official instructions](https://cloud.r-project.org/) for your platform. 
+
+Follow this [YouTube video](https://www.youtube.com/watch?v=Pg3WY8wg1cY) or continue reading. 
 
 To install the version associated with the current `master` git branch on GitHub, 
 use the `remotes`::install_github` function.
