--- a/scripts/OutputDifferences.Rmd
+++ b/scripts/OutputDifferences.Rmd
@@ -8,14 +8,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Differences in Hector outputs
 
-Hello, this is `leeyabot`! `r emo::ji("robot")`
+Hello, this is `leeyabot`! 
 
 ``` {r differences, echo = FALSE, message = FALSE, include = FALSE}
 # Load packages
 library(dplyr)
 library(ggplot2)
 library(hector)
-library(emo)
 library(here)
 
 # Set root directory
