--- a/vignettes/hector.Rmd
+++ b/vignettes/hector.Rmd
@@ -204,7 +204,13 @@ However, the effects only become pronounced in the latter half of the 21st centu
 
 Hector runs quickly, making it easy to run many simulations under slightly different
 configurations. One application of this is to explore the sensitivity of Hector
-to variability in its parameters.
+to variability in its parameters. This is an example of a basic sensitivity analysis, 
+where we change Hector parameter values and look at the impacts on Hector output. For 
+users that are interested in more advanced sensitivity analyses or may be probabilistic 
+Hector runs we recommend using [Matilda](https://github.com/JGCRI/matilda)! Matilda 
+is a package that provides a probabilistic framework to the Hector simple climate model. 
+Now to continue with this example.
+
 
 The basic procedure for this is the same as in the previous section. However, to
 save typing (and, in general, to be good programmers!), let's create some functions.
