--- a/vignettes/articles/Hector-Wider-World.Rmd
+++ b/vignettes/articles/Hector-Wider-World.Rmd
@@ -16,6 +16,12 @@ This page lists the key model documentation manuscripts, articles featuring Hect
 
 ## Documentation Manuscripts {#hector_documentation}
 
+### Hector V 3.2.0
+
+Dorheim, K., Gering, S., Gieseke, R., Hartin, C., Pressburger, L., Shiklomanov, A. N., Smith, S. J., Tebaldi, C., Woodard, D. L., and Bond-Lamberty, B.: Hector V3.2.0: functionality and performance of a reduced-complexity climate model, Geosci. Model Dev., 17, 4855–4869, https://doi.org/10.5194/gmd-17-4855-2024, 2024.
+
+*  Hector V3.2.0 uses the AR6 radiative forcing calculations, includes the permafrost feedback and  carbon tracking feature. Hector's NPP accounts for LUC emissions. 
+
 ### Hector V 2.0
 
 Vega-Westhoff, B., Sriver, R. L., Hartin, C. A., Wong, T. E., and Keller, K.: Impacts of observational constraints related to sea level on estimates of climate sensitivity, Earths Future, 7, 677–690, 2019.
